# RedditRadar

./: .env.example  .gitignore  LICENSE  PROJECT_SPEC.md  Pipfile  README.md  SESSION_NOTES.md  SESSION_PROGRESS.md  main.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
config/: default.yaml
src/: __init__.py  config.py  database.py  discovery.py  llm_client.py  ranker.py  reddit_client.py  scheduler.py  templates.py
src/analysis/: __init__.py  clustering.py  historical.py  radar.py  report.py  scoring.py
src/ui/: __init__.py  web.py
src/ui/templates/: base.html  dashboard.html  historical.html  history.html  job_status.html  new_run.html  run_detail.html  settings.html
tests/: __init__.py  test_cli.py  test_database.py  test_reddit_client.py
